# spikeinterface_rust

./: .gitignore
Python/: generate_data.ipynb  locally_exclusive.py  main_detect.py  peak_detection_benchmark.ipynb  peak_detection_benchmark_file.ipynb  peak_detection_benchmark_sam.ipynb  python_interface.ipynb  python_template_matching.ipynb  python_template_matching_call.ipynb
peak_detection/: Cargo.toml
peak_detection/src/: data_file_reading.rs  lib.rs  rust_peak_detection_locally_exclusive.rs  rust_peak_detection_locally_exclusive_sam.rs  rust_peak_detection_locally_exclusive_sam2.rs  rust_peak_detection_locally_exclusive_sliding_window.rs
spikeinterface files/: locally_exclusive.py  main.py
