[package]
name = "peak_detection"
version = "0.1.0"
edition = "2024"

[lib]
name = "peak_detection"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["abi3-py38","extension-module"] }
rand = "0.9.2"
ndarray = {version = "0.16.1", features = ["serde"]}
ndarray-npy = "0.9.1"
numpy = "0.26.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"