[package]
name = "peak_detection"
version = "0.1.0"
edition = "2024"

[lib]
name = "peak_detection"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["abi3-py38","extension-module"] }
rand = "0.9.2"
rayon = "1.11.0"
ndarray = { version ="0.17.1", features = ["rayon"] }
numpy = "0.27.1"